[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/world/props/playersContainer.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/world/levels/ffaLevel.gd" type="Script" id=3]

[sub_resource type="ProceduralSky" id=1]
sky_energy = 0.57
ground_bottom_color = Color( 0, 0, 0, 1 )
ground_horizon_color = Color( 0.309804, 0.27451, 0.243137, 1 )

[sub_resource type="Environment" id=2]
background_mode = 2
background_sky = SubResource( 1 )
tonemap_mode = 2
tonemap_exposure = 0.9
tonemap_white = 4.71
ss_reflections_enabled = true
ssao_enabled = true
ssao_radius = 2.0
ssao_intensity = 3.0
dof_blur_far_distance = 57.06
dof_blur_far_amount = 0.05
dof_blur_far_quality = 0
dof_blur_near_distance = 25.2
dof_blur_near_amount = 0.07
dof_blur_near_quality = 0
glow_enabled = true

[node name="world" type="Spatial" groups=[
"wellcoming",
]]
script = ExtResource( 3 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.0332598, 0.999447, 0, -0.999447, 0.0332598, -0.294, 40, -5.578 )
fov = 97.1

[node name="SpawnButton" type="Button" parent="Camera"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -64.0
margin_top = -70.0
margin_right = 64.0
text = "Spawn"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="playersContainer" parent="." instance=ExtResource( 1 )]

[node name="1" type="Position3D" parent="playersContainer"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.394316, -4.10763, 6.25849 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 2 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( -0.387336, -0.468239, 0.794181, -0.0135011, 0.864213, 0.502945, -0.92184, 0.184086, -0.341062, -0.583954, 0, 0 )
light_color = Color( 1, 0.998167, 0.89, 1 )
shadow_enabled = true
[connection signal="pressed" from="Camera/SpawnButton" to="." method="_on_SpawnButton_pressed"]
